@@ -4,7 +4,8 @@ zeit.content.article changes
 3.1.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix incomplete API change to using references as Article.main_image
+  (VIV-305).
 
 
 3.1.4 (2014-03-10)
